setting up new gradle and connect docker